--- a/fronted1.1/index.html
+++ b/fronted1.1/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap CSS -->
 
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-5.0.1-dist/css/bootstrap-grid.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <title>Portafolio</title>
