implemente bien bustrap y tambien lo cambie por una referencia a la web¨
´´

¨¨

--- a/index.html
+++ b/index.html
@@ -22,19 +22,24 @@
   <body>
 
     <div class="container seccion">
-        <div class="row"><!--añadir o no una apartado para "que quiero"-->
-            <div class="col-6">//logo</div>
-            <div class="col" >Proyectos</div>
-            <div class="col"> conocimientos </div>
-            <div class="col"> contacto </div>
-        </div>
-    </div>
-
-    <div class="container ">
       <div class="row">
-        <div class="col"> <img src="perfil.jpg" alt="foto perfil" class="img-thumbnail"> </div>
+        <div class="col">
+          <img src="portada.jpg" class= "img-fluid " alt="...">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="perfil.jpg" class= "rounded float-start " alt="...">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">Tengo interes en </div>
+        <div class="col" >añadir seccion</div>
+        <div class="col"> mas </div>
       </div>
     </div>
+
+  
 
     <div class="container seccion">
       <div class="row">
